Change in the new Branch

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: blueviolet;
+    color: rgb(50, 18, 79);
 }
 body{
-    background-color: blanchedalmond;
+    background-color: rgb(100, 61, 2);
 }
